# personal_sidekick_co_worker

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py  evaluator.py  sidekick.py  sidekick_tools.py  state.py  worker.py
tests/: conftest.py  test_app.py  test_evaluator.py  test_sidekick.py  test_sidekick_tools.py  test_worker.py
